<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <!-- The primary full-screen view. This can be replaced with whatever view
         is needed to present your content, e.g. VideoView, SurfaceView,
         TextureView, etc. -->
    <TextView
        android:id="@+id/fullscreen_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:keepScreenOn="true"
        android:textColor="#33b5e5"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows. -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtColor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center_vertical"
                android:minLines="2"
                android:text="@string/color_select"
                android:textColor="@android:color/white"
                android:textSize="45sp" />

            <Button
                android:id="@+id/btnColor"
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:backgroundTint="@android:color/black"
                android:fontFamily="sans-serif-thin"
                android:text="@string/plus"
                android:textColor="@android:color/white"
                android:textSize="36sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/bntScreen"
                android:layout_width="259dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-thin"
                android:maxLines="1"
                android:text="@string/start"
                android:textColor="@android:color/white"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/txtScreen"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="2"
                android:fontFamily="sans-serif-thin"
                android:minLines="2"
                android:text="@string/screen_start"
                android:textAlignment="textEnd"
                android:textColor="@android:color/white"
                android:textSize="45sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtDope"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/dope"
                android:textAlignment="textEnd"
                android:textColor="@color/dope"
                android:textSize="50sp" />

            <TextView
                android:id="@+id/txtStrobe"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:gravity="center"
                android:text="@string/strobe"
                android:textAlignment="textStart"
                android:textColor="@color/strobe"
                android:textSize="50sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txtLed"
                android:layout_width="86dp"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:fontFamily="sans-serif-thin"
                android:minLines="2"
                android:text="@string/led_start"
                android:textColor="@android:color/white"
                android:textSize="40sp" />

            <Button
                android:id="@+id/btLed"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:background="@drawable/button_shape"
                android:fontFamily="sans-serif-thin"
                android:text="@string/led"
                android:textColor="@android:color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/sbLed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:layout_weight="1"
                android:progressTint="@android:color/white"
                android:thumbTint="@android:color/white" />

        </LinearLayout>
    </LinearLayout>

</FrameLayout>